--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "tailwindcss": "^3.4.4",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
